fix text alignment

--- a/main.css
+++ b/main.css
@@ -23,6 +23,7 @@ body, html {
 
 .center {
     position: absolute;
+    text-align: center;
     top: 50%;
     transform: translateY(-50%);
     width: 100%;
